--- a/index.html
+++ b/index.html
@@ -139,27 +139,34 @@ function exportPDF(){
    rows+=`<tr><td>${d.v[`d${di}v${i}_time`]||''}</td><td>${f}</td><td>${d.v[`d${di}v${i}_amac`]||''}</td><td>${d.v[`d${di}v${i}_numune`]?'✔':''}</td><td>${d.v[`d${di}v${i}_katalog`]?'✔':''}</td></tr>`;
   }
   if(rows){
-   pages+=`<div style="page-break-after:always">
-   <h2 style="text-align:center">${g}</h2>
-   <p><b>${d.meta.personel}</b> | ${d.meta.bolge} | ${d.meta.tarih} | Plaka: ${d.meta.plaka}</p>
-   <table border="1" width="100%" cellpadding="6" style="border-collapse:collapse">
-   <tr><th>Saat</th><th>Firma</th><th>Amaç</th><th>Numune</th><th>Katalog</th></tr>
-   ${rows}
-   </table>
-   </div>`;
+   pages+=`<section class="pdfPage">
+    <h2>${g}</h2>
+    <div class="meta">${d.meta.personel} | ${d.meta.bolge} | ${d.meta.tarih} | Plaka: ${d.meta.plaka}</div>
+    <table>
+     <tr><th>Saat</th><th>Firma</th><th>Amaç</th><th>Numune</th><th>Katalog</th></tr>
+     ${rows}
+    </table>
+   </section>`;
   }
  });
  if(!pages){alert('Dolu ziyaret yok');return;}
- const w=document.createElement('div');
- w.style.position='fixed'; w.style.left='-9999px';
- w.innerHTML=pages;
- document.body.appendChild(w);
+ const pdfRoot=document.createElement('div');
+ pdfRoot.id='pdfRoot';
+ pdfRoot.innerHTML=`<style>
+ #pdfRoot{position:fixed;top:0;left:0;width:210mm;min-height:297mm;background:#fff;color:#000;z-index:9999}
+ .pdfPage{page-break-after:always;padding:12mm;font-family:Arial}
+ .pdfPage h2{text-align:center;margin:0 0 6px 0}
+ .meta{text-align:center;font-size:12px;margin-bottom:8px}
+ table{width:100%;border-collapse:collapse;font-size:11px}
+ th,td{border:1px solid #000;padding:4px;text-align:left}
+ </style>${pages}`;
+ document.body.appendChild(pdfRoot);
  html2pdf().set({
-  margin:10,
+  margin:0,
   filename:'haftalik_ziyaret_raporu.pdf',
   jsPDF:{format:'a4',orientation:'portrait'},
-  html2canvas:{scale:2}
- }).from(w).save().then(()=>document.body.removeChild(w));
+  html2canvas:{scale:2,useCORS:true}
+ }).from(pdfRoot).save().then(()=>document.body.removeChild(pdfRoot));
 }
 
 function newWeek(){ if(confirm('Tüm veriler silinecek. Emin misiniz?')){localStorage.removeItem(KEY);location.reload();} }
@@ -168,3 +175,4 @@ loadData();
 </script>
 </body>
 </html>
+
