--- a/index.html
+++ b/index.html
@@ -129,44 +129,63 @@ function calcSummary(d){
 }
 
 function exportPDF(){
- const d=JSON.parse(localStorage.getItem(KEY)); if(!d){alert('Kayıt yok');return;}
- calcSummary(d);
+ const d=JSON.parse(localStorage.getItem(KEY));
+ if(!d){alert('Kayıt yok');return;}
+
  let pages='';
  gunler.forEach((g,di)=>{
   let rows='';
   for(let i=1;i<=ziyaretAdet;i++){
-   const f=d.v[`d${di}v${i}_firma`]; if(!f) continue;
-   rows+=`<tr><td>${d.v[`d${di}v${i}_time`]||''}</td><td>${f}</td><td>${d.v[`d${di}v${i}_amac`]||''}</td><td>${d.v[`d${di}v${i}_numune`]?'✔':''}</td><td>${d.v[`d${di}v${i}_katalog`]?'✔':''}</td></tr>`;
+   const f=d.v[`d${di}v${i}_firma`];
+   if(!f) continue;
+   rows+=`<tr>
+     <td>${d.v[`d${di}v${i}_time`]||''}</td>
+     <td>${f}</td>
+     <td>${d.v[`d${di}v${i}_amac`]||''}</td>
+     <td style="text-align:center">${d.v[`d${di}v${i}_numune`]?'✔':''}</td>
+     <td style="text-align:center">${d.v[`d${di}v${i}_katalog`]?'✔':''}</td>
+   </tr>`;
   }
   if(rows){
-   pages+=`<section class="pdfPage">
+   pages+=`<div class="pdfPage">
     <h2>${g}</h2>
     <div class="meta">${d.meta.personel} | ${d.meta.bolge} | ${d.meta.tarih} | Plaka: ${d.meta.plaka}</div>
     <table>
-     <tr><th>Saat</th><th>Firma</th><th>Amaç</th><th>Numune</th><th>Katalog</th></tr>
-     ${rows}
+     <thead><tr><th>Saat</th><th>Firma</th><th>Amaç</th><th>Numune</th><th>Katalog</th></tr></thead>
+     <tbody>${rows}</tbody>
     </table>
-   </section>`;
+   </div>`;
   }
  });
- if(!pages){alert('Dolu ziyaret yok');return;}
+
+ if(!pages){alert('PDF için dolu ziyaret yok');return;}
+
+ // PDF alanını GERÇEKTEN ekrana ekle (kritik)
  const pdfRoot=document.createElement('div');
  pdfRoot.id='pdfRoot';
  pdfRoot.innerHTML=`<style>
- #pdfRoot{position:fixed;top:0;left:0;width:210mm;min-height:297mm;background:#fff;color:#000;z-index:9999}
- .pdfPage{page-break-after:always;padding:12mm;font-family:Arial}
- .pdfPage h2{text-align:center;margin:0 0 6px 0}
- .meta{text-align:center;font-size:12px;margin-bottom:8px}
- table{width:100%;border-collapse:collapse;font-size:11px}
- th,td{border:1px solid #000;padding:4px;text-align:left}
+  #pdfRoot{background:#fff;color:#000;width:210mm;padding:12mm}
+  .pdfPage{page-break-after:always;font-family:Arial}
+  .pdfPage h2{text-align:center;margin:0 0 6px 0}
+  .meta{text-align:center;font-size:12px;margin-bottom:8px}
+  table{width:100%;border-collapse:collapse;font-size:11px}
+  th,td{border:1px solid #000;padding:4px}
  </style>${pages}`;
+
  document.body.appendChild(pdfRoot);
- html2pdf().set({
-  margin:0,
-  filename:'haftalik_ziyaret_raporu.pdf',
-  jsPDF:{format:'a4',orientation:'portrait'},
-  html2canvas:{scale:2,useCORS:true}
- }).from(pdfRoot).save().then(()=>document.body.removeChild(pdfRoot));
+
+ // Render garanti bekleme
+ setTimeout(()=>{
+  html2pdf()
+   .set({
+     filename:'haftalik_ziyaret_raporu.pdf',
+     jsPDF:{format:'a4',orientation:'portrait'},
+     html2canvas:{scale:2}
+   })
+   .from(pdfRoot)
+   .save()
+   .then(()=>document.body.removeChild(pdfRoot));
+ },500);
 }
 
 function newWeek(){ if(confirm('Tüm veriler silinecek. Emin misiniz?')){localStorage.removeItem(KEY);location.reload();} }
@@ -175,4 +194,3 @@ loadData();
 </script>
 </body>
 </html>
-
