--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@ button{padding:14px;border:none;border-radius:14px;font-size:15px;color:#fff}
  body{background:#fff}
  header,.actions,.tabs{display:none}
  .container{max-width:none;padding:0}
+ .card{border-radius:0;page-break-inside:avoid}
+ .day{page-break-after:always}
+ .visit{page-break-inside:avoid}
+ .visit.empty{display:none}
+}
+
+ header,.actions,.tabs{display:none}
+ .container{max-width:none;padding:0}
  .card{page-break-after:always;border-radius:0}
 }
 </style>
@@ -114,6 +122,7 @@ function saveData(){
  const data={meta:{personel:pSel.value,bolge:bolge.value,tarih:tarih.value,plaka:plaka.value,kmBas:kmBas.value,kmBit:kmBit.value},v:{}};
  document.querySelectorAll('[data-k]').forEach(e=>data.v[e.dataset.k]=e.type==='checkbox'?e.checked:e.value);
  localStorage.setItem(KEY,JSON.stringify(data));
+ markEmptyVisits();
  calcSummary(data);
  alert('Kaydedildi');
 }
@@ -122,7 +131,9 @@ function loadData(){
  const d=JSON.parse(localStorage.getItem(KEY)); if(!d) return;
  Object.keys(d.meta).forEach(k=>document.getElementById(k).value=d.meta[k]);
  document.querySelectorAll('[data-k]').forEach(e=>{if(d.v[e.dataset.k]!=null) e.type==='checkbox'?e.checked=d.v[e.dataset.k]:e.value=d.v[e.dataset.k]});
+ markEmptyVisits();
  calcSummary(d);
+}
 }
 
 function calcSummary(d){
@@ -144,6 +155,15 @@ function exportPDF(){
 function newWeek(){ if(confirm('Tüm veriler silinecek. Emin misiniz?')){localStorage.removeItem(KEY);location.reload();} }
 
 loadData();
+
+function markEmptyVisits(){
+ document.querySelectorAll('.visit').forEach(v=>{
+  const firma=v.querySelector('input[placeholder="Firma / Cari"]');
+  if(!firma || !firma.value.trim()) v.classList.add('empty');
+  else v.classList.remove('empty');
+ });
+}
+
 </script>
 </body>
 </html>
