--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ input,select{width:100%;padding:8px;border-radius:8px;border:1px solid var(--b)}
 .tabs button.active{background:var(--a);color:#fff}
 .visit{border:1px solid var(--b);border-radius:10px;padding:10px;margin-bottom:8px}
 .visit b{display:block;margin-bottom:6px}
+.visit.empty{display:none}
 .actions{display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:10px}
 button{padding:14px;border:none;border-radius:14px;font-size:15px;color:#fff}
 .save{background:#43a047}
@@ -28,20 +29,13 @@ button{padding:14px;border:none;border-radius:14px;font-size:15px;color:#fff}
 .summary div{background:#e3f2fd;padding:10px;border-radius:10px}
 @media(max-width:600px){.summary{grid-template-columns:1fr 1fr}}
 
-/* PDF PRINT STYLES */
+/* PDF / PRINT */
 @media print{
  body{background:#fff}
  header,.actions,.tabs{display:none}
  .container{max-width:none;padding:0}
- .card{border-radius:0;page-break-inside:avoid}
+ .card{border-radius:0}
  .day{page-break-after:always}
- .visit{page-break-inside:avoid}
- .visit.empty{display:none}
-}
-
- header,.actions,.tabs{display:none}
- .container{max-width:none;padding:0}
- .card{page-break-after:always;border-radius:0}
 }
 </style>
 </head>
@@ -124,16 +118,16 @@ function saveData(){
  localStorage.setItem(KEY,JSON.stringify(data));
  markEmptyVisits();
  calcSummary(data);
- alert('Kaydedildi');
 }
 
 function loadData(){
  const d=JSON.parse(localStorage.getItem(KEY)); if(!d) return;
  Object.keys(d.meta).forEach(k=>document.getElementById(k).value=d.meta[k]);
- document.querySelectorAll('[data-k]').forEach(e=>{if(d.v[e.dataset.k]!=null) e.type==='checkbox'?e.checked=d.v[e.dataset.k]:e.value=d.v[e.dataset.k]});
+ document.querySelectorAll('[data-k]').forEach(e=>{
+  if(d.v[e.dataset.k]!=null){e.type==='checkbox'?e.checked=d.v[e.dataset.k]:e.value=d.v[e.dataset.k];}
+ });
  markEmptyVisits();
  calcSummary(d);
-}
 }
 
 function calcSummary(d){
@@ -152,9 +146,12 @@ function exportPDF(){
  window.print();
 }
 
-function newWeek(){ if(confirm('Tüm veriler silinecek. Emin misiniz?')){localStorage.removeItem(KEY);location.reload();} }
-
-loadData();
+function newWeek(){
+ if(confirm('Tüm veriler silinecek. Emin misiniz?')){
+  localStorage.removeItem(KEY);
+  location.reload();
+ }
+}
 
 function markEmptyVisits(){
  document.querySelectorAll('.visit').forEach(v=>{
@@ -164,6 +161,7 @@ function markEmptyVisits(){
  });
 }
 
+loadData();
 </script>
 </body>
 </html>
