--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@ const days=document.getElementById('days');
 
 gunler.forEach((g,di)=>{
  tabs.innerHTML+='<button onclick="openDay('+di+')" '+(di===0?'class=active':'')+'>'+g.substring(0,3).toUpperCase()+'</button>';
- let h='<div class="day" style="display:'+(di===0?'block':'none')+'"><div class="card"><h3>'+g+'</h3><table><tr><th>#</th><th>Saat</th><th>Firma</th><th>Amaç</th><th>N</th><th>K</th></tr>';
+ let h='<div class="day" style="display:'+(di===0?'block':'none')+'"><div class="card"><h3>'+g+'</h3><table><tr><th>#</th><th>Saat</th><th>Firma</th><th>Telefon</th><th>E‑Mail</th><th>Amaç</th><th>N</th><th>K</th></tr>';
  for(let i=1;i<=ziyaretAdet;i++){
   h+='<tr class="vrow" data-di="'+di+'" data-i="'+i+'">'
     +'<td>'+i+'</td>'
     +'<td><input type="time" data-k="d'+di+'v'+i+'_time"></td>'
     +'<td><input data-k="d'+di+'v'+i+'_firma"></td>'
+    +'<td><input data-k="d'+di+'v'+i+'_telefon"></td>'
+    +'<td><input data-k="d'+di+'v'+i+'_mail"></td>'
     +'<td><select data-k="d'+di+'v'+i+'_amac"><option></option><option>Tanışma</option><option>Tekrar</option><option>İade</option><option>Tanıtım</option></select></td>'
     +'<td><input type="checkbox" data-k="d'+di+'v'+i+'_numune"></td>'
     +'<td><input type="checkbox" data-k="d'+di+'v'+i+'_katalog"></td>'
@@ -143,7 +145,7 @@ function exportPDF(){
  // SAYFA 2+ TABLO
  html+=`<h2 style="text-align:center">HAFTALIK ZİYARET DETAYI</h2>`;
  html+=`<table border="1" style="width:100%;border-collapse:collapse;font-size:11px">`;
- html+=`<tr><th>Gün</th><th>Saat</th><th>Firma</th><th>Amaç</th><th>Numune</th><th>Katalog</th></tr>`;
+ html+=`<tr><th>Gün</th><th>Saat</th><th>Firma</th><th>Telefon</th><th>E‑Mail</th><th>Amaç</th><th>Numune</th><th>Katalog</th></tr>`;
  gunler.forEach((g,di)=>{
   for(let i=1;i<=ziyaretAdet;i++){
    const f=data.v[`d${di}v${i}_firma`];
@@ -151,7 +153,7 @@ function exportPDF(){
    html+=`<tr>`+
    `<td>${g}</td>`+
    `<td>${data.v[`d${di}v${i}_time`]||''}</td>`+
-   `<td>${f}</td>`+
+   `<td>${f}</td><td>${data.v[`d${di}v${i}_telefon`]||''}</td><td>${data.v[`d${di}v${i}_mail`]||''}</td>`+
    `<td>${data.v[`d${di}v${i}_amac`]||''}</td>`+
    `<td>${data.v[`d${di}v${i}_numune`]?'✔':''}</td>`+
    `<td>${data.v[`d${di}v${i}_katalog`]?'✔':''}</td>`+
